--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
     "moment": "^2.29.2",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^2.3.3",
     "node-cron": "^3.0.0",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
@@ -30,7 +32,6 @@
     "sequelize-cli": "^6.2.0",
     "socket.io": "^4.4.1",
     "winston": "^3.3.3",
-    "mysql2": "^2.3.3",
     "winston-daily-rotate-file": "^4.5.5"
   },
   "devDependencies": {
